kube-app-yml/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: postgres
  namespace: url-shortener-api

spec:
  serviceName: postgres-service

  replicas: 1 # by default is 1

  selector:
    matchLabels:
      app: postgres
      tier: database

  template:
    metadata:
      labels:
        app: postgres
        tier: database

    spec:
      containers:
        - name: postgres

          image: postgres:16-alpine

          ports:
            - containerPort: 5432
              name: postgres

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: postgres-storage

      spec:
        accessModes:
          - ReadWriteOnce

        storageClassName: longhorn

        resources:
          requests:
            storage: 1Gi
