kube-app-yml/headless-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres-service
  namespace: url-shortener-api

spec:
  clusterIP: None

  selector:
    app: postgres
    tier: database

  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
