kube-app-yml/redis-servic.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: url-shortener-api
  labels:
    app: redis
    tier: cache

spec:
  selector:
    app: redis
    tier: cache

  type: ClusterIP

  ports:
    - name: redis
      port: 6379
      targetPort: 6379
