kube-app-yml/url-shortener-api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: url-shortener-api-service
  namespace: url-shortener-api

  labels:
    app: url-shortener-api
    tier: backend

spec:
  selector:
    app: url-shortener-api
    tier: backend

  type: ClusterIP

  ports:
    - name: http
      port: 8000
      targetPort: 8000

  sessionAffinity: None
