kube-app-yml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: url-shortener-ingress
  namespace: url-shortener-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: url-shortener-api-service
                port:
                  number: 8000
